--- a/trunk/ctrlJS/index.html
+++ b/trunk/ctrlJS/index.html
@@ -1,11 +1,14 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Lcation de vidéo</title>
+    <title>Vidéo futur</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
       <div id="menu">
+          <ul>
+              <li><a href="location.html" </li>
+          </ul>
           
       </div>
       <div id="corp">
