--- a/ctrlJS/index.html
+++ b/ctrlJS/index.html
@@ -3,16 +3,18 @@
   <head>
     <title>Vidéo futur</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
+	<script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
-      <div id="menu">
-          <ul>
-              <li><a href="location.html" </li>
-          </ul>
-          
-      </div>
-      <div id="corp">
+	
+		<div id="menu">
+		
+		</div>
+		<div id="corp">
 
-      </div>
+		</div>
   </body>
 </html>
