--- a/ctrlJS/location.html
+++ b/ctrlJS/location.html
@@ -7,6 +7,7 @@
 
         <!-- Feuilles de style -->
         <link rel="stylesheet" media="screen" href="location.css" type="text/css" />
+		<link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
 
         <!-- Scripts JS -->
         <script type="text/javascript" src="js/jquery.js"></script>
