--- a/trunk/ctrlJS/ajax/details.html
+++ b/trunk/ctrlJS/ajax/details.html
@@ -4,7 +4,7 @@
         <title>Vidéo futur</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- Feuilles de style -->
-        <link rel="stylesheet" media="screen" href="location.css" />
+        <link rel="stylesheet" media="screen" href="style.css" />
         <link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
         <!-- Scripts JS -->
         <script type="text/javascript" src="jquery.js"></script>
