--- a/trunk/ctrlJS/index.html
+++ b/trunk/ctrlJS/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Vidéo futur</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	<script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
-  </head>
-  <body>
-	
+	<head>
+		<title>Vidéo futur</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+
+        <!-- Feuilles de style -->
+        <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
+		<link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
+
+        <!-- Scripts JS -->
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
+
+	</head>
+	<body>
+		- checker les cookies
+			<div id="slider" class="nivoSlider">
+				<img src="images/toystory.jpg" alt="" />
+				<img src="images/walle.jpg" alt="" />
+				<img src="images/nemo.jpg" alt="" />
+			</div>
+
+
 		<div id="menu">
-		
+
 		</div>
 		<div id="corp">
 
 		</div>
-  </body>
+		<script type="text/javascript">
+
+			$(window).load(function() {
+				$('#slider').nivoSlider();
+			});
+		</script>
+	</body>
 </html>
