--- a/ctrlJS/ajax/location.html
+++ b/ctrlJS/ajax/location.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
         <!-- Feuilles de style -->
-        <link rel="stylesheet" media="screen" href="location.css" type="text/css" />
+        <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
 		<link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
 
         <!-- Scripts JS -->
@@ -30,19 +30,15 @@
                 </ul>
             </div>
 
-            <div id="slider-wrapper">
+			<div id="slider-wrapper">
 
-                <div id="slider" class="nivoSlider">
-                    <img src="images/toystory.jpg" alt="" />
-                    <a href="http://dev7studios.com"><img src="images/up.jpg" alt="" title="This is an example of a caption" /></a>
-                    <img src="images/walle.jpg" alt="" />
-                    <img src="images/nemo.jpg" alt="" title="#htmlcaption" />
-                </div>
-                <div id="htmlcaption" class="nivo-html-caption">
-                    <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
-                </div>
+				<div id="slider" class="nivoSlider">
+					<img src="images/toystory.jpg" alt="" />
+				<img src="images/walle.jpg" alt="" />
+				<img src="images/nemo.jpg" alt="" />
+				</div>
 
-            </div>
+			</div>
             <div id="corp">
 
             </div>
