--- a/ctrlJS/index.html
+++ b/ctrlJS/index.html
@@ -12,14 +12,15 @@
         <!-- Scripts JS -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
+		<script type="text/javascript" src="js/script2.js"></script>
 
 	</head>
 	<body>
 		- checker les cookies
 			<div id="slider" class="nivoSlider">
-				<img src="images/toystory.jpg" alt="" />
-				<img src="images/walle.jpg" alt="" />
-				<img src="images/nemo.jpg" alt="" />
+				<a href="" title="" id="" onclick="details(1)"><img src="images/toystory.jpg" alt="" /></a>
+				<a href="" title="" id="" onclick="details(2)"><img src="images/walle.jpg" alt="" /></a>
+				<a href="" title="" id="" onclick="details(3)"><img src="images/nemo.jpg" alt="" /></a>
 			</div>
 
 
