--- a/trunk/ctrlJS/index.html
+++ b/trunk/ctrlJS/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<title>Vidéo futur</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,11 +9,13 @@
         <!-- Feuilles de style -->
         <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
 		<link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
+		<link rel="stylesheet" media="screen" href="ThickBox.css" type="text/css" />
 
         <!-- Scripts JS -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
 		<script type="text/javascript" src="js/script2.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
 
 	</head>
 	<body>
@@ -22,7 +25,6 @@
 				<a href="" title="" id="" onclick="details(2)"><img src="images/walle.jpg" alt="" /></a>
 				<a href="" title="" id="" onclick="details(3)"><img src="images/nemo.jpg" alt="" /></a>
 			</div>
-
 
 		<div id="menu">
 
