--- a/trunk/ctrlJS/index.html
+++ b/trunk/ctrlJS/index.html
@@ -19,12 +19,11 @@
 
 	</head>
 	<body>
-		- checker les cookies
-			<div id="slider" class="nivoSlider">
-				<a href="" title="" id="" onclick="details(1)"><img src="images/toystory.jpg" alt="" /></a>
-				<a href="" title="" id="" onclick="details(2)"><img src="images/walle.jpg" alt="" /></a>
-				<a href="" title="" id="" onclick="details(3)"><img src="images/nemo.jpg" alt="" /></a>
-			</div>
+		<div id="slider" class="nivoSlider">
+			<a href="" title="" id="" onclick="details(14);return false;"><img src="images/toystory.jpg" alt="" /></a>
+			<a href="" title="" id="" onclick="details(15);return false;"><img src="images/walle.jpg" alt="" /></a>
+			<a href="" title="" id="" onclick="details(13);return false;"><img src="images/nemo.jpg" alt="" /></a>
+		</div>
 
 		<div id="menu">
 
